@@ -6,6 +6,7 @@ import com.std.sbb.question.Question;
 import com.std.sbb.question.QuestionRepository;
 import com.std.sbb.question.QuestionService;
 import com.std.sbb.user.UserService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -100,29 +101,29 @@ class SbbApplicationTests {
 		assertEquals("네 자동으로 생성됩니다.", answerList.get(0).getContent());
 	}
 
-	@Test
-	@DisplayName("데이터 밀어넣기")
-	void testInsertJpa() {
-		for (int i = 1; i <= 300; i++) {
-			String subject = String.format("테스트 데이터입니다:[%03d]", i);
-			String content = "내용무";
-			this.questionService.create(subject, content);
-		}
-	}
-
-	@Test
-	@DisplayName("스트림 버전 데이터 밀어넣기")
-	void t012() {
-		IntStream.rangeClosed(3, 300)
-				.forEach(no -> questionService.create("테스트 제목입니다. %d".formatted(no), "테스트내용입니다. %d".formatted(no)));
-	}
-
+//	@Test
+//	@DisplayName("데이터 밀어넣기")
+//	void testInsertJpa() {
+//		for (int i = 1; i <= 300; i++) {
+//			String subject = String.format("테스트 데이터입니다:[%03d]", i);
+//			String content = "내용무";
+//			this.questionService.create(subject, content);
+//		}
+//	}
+//
+//	@Test
+//	@DisplayName("스트림 버전 데이터 밀어넣기")
+//	void t012() {
+//		IntStream.rangeClosed(3, 300)
+//				.forEach(no -> questionService.create("테스트 제목입니다. %d".formatted(no), "테스트내용입니다. %d".formatted(no)));
+//	}
+//
 //	@BeforeEach
-	@Test
-	@DisplayName("회원데이터 넣기")
-	void beforeEachUserData() {
-		userService.create("user1", "user1@test.com", "1234");
-		userService.create("user2", "user2@test.com", "1234");
-	}
+//	@Test
+//	@DisplayName("회원데이터 넣기")
+//	void beforeEachUserData() {
+//		userService.create("user1", "user1@test.com", "1234");
+//		userService.create("user2", "user2@test.com", "1234");
+//	}
 
 }
